app/assets/stylesheets/homepage.scss
.homepage {
  margin-bottom: 15px;
  section:not(:last-child)::after {
    content: '';
    display: block;
    width: 50%;
    height: 2px;
    background-color: $gradient3;
    margin: 20px auto;
  }

  .hero {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    margin-bottom: 15px;
    .hero-image {
      background-image: url('hero.jpeg');
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
      width: 100%;
      height: 100%;
      .hero-content {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-align: center;
      }
    }
  }

  .hero-content > h1 {
    color: black;
  }
  
  .hero-content p {
    font-size: 1.5rem;
  }

  .slogan {
    padding: 50px auto;
    text-align: center;
    border-bottom: none;
    
    h2 {
      margin: 0;
      font-size: 2em;
    }
  }
  
  // button styles
  .button-container {
    display: flex;
    justify-content: center;
    gap: 20px;
    
    .button {
      display: inline-block;
      padding: 15px 25px;
      font-size: 1em;
      color: black;
      text-decoration: none;
      border-radius: 8px;
      transition: background-color 0.3s, transform 0.3s;
    }
    
    .contact-btn {
      background-color: $gradient1;
      border: 1px solid $gradient1;
    }
    
    .contact-btn:hover {
      background-color: $gradient5;
      border: 1px solid $gradient;
      color: $gradient1
    }
    
    .buy-btn {
      background-color: $gradient1;
      border: 1px solid $gradient1;
    }
    
    .buy-btn:hover {
      background-color: black;
      border: 1px solid $gradient1;
      color: $gradient1
    }
  }
}

